<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:backgroundTint="#36173A"
        app:cardCornerRadius="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_popup_window_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/about_optional_rerolls"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/scoreInfo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:text="@string/score_Info1"
                    android:textColor="#009688"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scoreInfo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scoreInfo1"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:padding="5dp"
                    android:text="@string/score_Info2"
                    android:textColor="#FFC107"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/score_popup_window_info_view"
                    android:layout_width="match_parent"
                    android:layout_below="@id/scoreInfo2"
                    android:layout_height="1dp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_below="@+id/score_popup_window_info_view"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/scoreInfoYesBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="#009688"
                        android:gravity="center"
                        android:text="@string/s_yes_btn"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/scoreInfoNoBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:backgroundTint="#FFC107"
                        android:gravity="center"
                        android:text="@string/s_no_btn"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>