<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardCornerRadius="14dp"
        android:backgroundTint="#36173A">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popup_window_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="18dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/about_author"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/popup_window_author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#04BDC5"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/popup_window_author_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:textColor="#04BDC5"
                    android:textStyle="bold"
                    android:text="@string/uow_id"
                    android:layout_below="@+id/popup_window_author_name" />

                <TextView
                    android:id="@+id/popup_window_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/popup_window_author_id"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="monospace"
                    android:lineSpacingExtra="5sp"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:text="@string/info"
                    android:textAlignment="gravity"
                    android:textSize="13sp"
                    android:typeface="sans" />

                <View
                    android:id="@+id/popup_window_info_view"
                    android:layout_width="match_parent"
                    android:layout_below="@id/popup_window_info"
                    android:layout_height="1dp"
                    android:visibility="gone"
                    android:background="@color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_below="@+id/popup_window_info_view"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/popup_window_ok_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:backgroundTint="#8E1ABA"
                        android:gravity="center"
                        android:text="@string/ok_btn"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>